--- a/home.html
+++ b/home.html
@@ -3,21 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>caseStudy_bouncingGameUpgraded</title>
-    <style>
-        #canvas{
-            position: relative;
-        }
-
-        #image{
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-    </style>
 </head>
 <body>
 <canvas id = "canvas" width = "650" height = "650" style = "border: 1px solid #d3d3d3;"></canvas>
-<image id = "codegym" src = img/codegym.png leftmargin = 275 topmargin = 300 width = "100" height = "30" style = "display: none; border: 1px solid #d3d3d3;"></image>
+<image id = "codeGym" src = img/codegym.png leftmargin = 275 topmargin = 300 width = "100" height = "30" style = "display: none; border: 1px solid #d3d3d3;"></image>
 <script src = "CONST.js"></script>
 <script src = "Border.js"></script>
 <script src = "Brick.js"></script>
